--- a/.babelrc
+++ b/.babelrc
@@ -29,9 +29,9 @@
       ],
       "plugins": [
         ["module-resolver", {
-          "root": ["element-ui"],
+          "root": ["element-ui-plus"],
           "alias": {
-            "element-ui/src": "element-ui/lib"
+            "element-ui/src": "element-ui-plus/lib"
           }
         }]
       ]
